--- a/webCMC/webCMC_project/.gitignore
+++ b/webCMC/webCMC_project/.gitignore
@@ -1,4 +1,7 @@
 __pycache__
-webCMC_project/settings/production.py
+webCMC_project/settings/
 staticfiles/
 suivi/__pycache__
+webCMC_project/__init__.py
+webCMC_project/wsgi.py
+manage.py
